frontend/src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@font-face{
    font-family: "Carter One";
    src: url("./assets/fonts/CarterOne-Regular.ttf") format("truetype");
    font-weight: 700;
}

@font-face{
    font-family: "Quintessential";
    src: url("./assets/fonts/Quintessential-Regular.ttf") format("truetype");
    font-weight: 600;
}

body{
    background-color: #0F0F0F;
}

/* Hide scrollbar but keep scrolling (css in thumbnail image container) */
.no-scrollbar::-webkit-scrollbar {
  display: none;
}

/* ------------------------set loader in thumbnail and this is its design ------------------------- */
/* HTML: <div class="loader"></div> */
.loader {
  width: fit-content;
  font-size: 30px;
  clip-path: inset(0 3ch 0 0);
  animation: l4 1s steps(4) infinite;
}
.loader:before {
  content:"Loading..."
}
@keyframes l4 {to{clip-path: inset(0 -1ch 0 0)}}

